@startuml ConnectSphere-Code-Level-Class-Diagram
' C4 "Code" level view (IS212 Week 5): the Java classes actually implemented
' in backend/src/main/java/com/example/connect_sphere, not the full database
' schema — see SCHEMA.md for the complete ER diagram of every table,
' including the ones with no Java entity yet (users, equipments,
' ...).
'
' Kept as text (not an exported image) so it stays diffable and is meant to
' be updated in the same PR as the code whenever a class here changes shape,
' per this week's "keep diagrams as diffable text" guidance.
'
' Deliberately flat, no inheritance: every EventRequest behaves the same
' regardless of requestType, and every Venue behaves the same regardless of
' its layouts — there is no subclass anywhere in this codebase that
' overrides a method for a different runtime type, so none is modelled here.
' The two request "kinds" (creation vs amendment) are one class with a
' discriminator field (requestType), not a subclass each, because they do
' not yet diverge in behaviour — only in which fields are required. If EO03
' (amendment) later gives them real behavioural differences, revisit this
' before reaching for inheritance (see decision-log.md).

hide circle
skinparam classAttributeIconSize 0

enum EventRequestStatus {
  draft
  pending
  clarification_required
  approved
  rejected
  cancelled
}

enum AccessibilityFeature {
  accessible_parking
  drop_off_zone
  public_transport
  step_free_access
  wide_doorways
  elevators
  wheelchair_support
  none
}

enum VenueLayout {
  classroom
  theatre
  boardroom
  banquet
  exhibition
}

enum Facility {
  audio_visual_equipment
  air_conditioning
  breakout_spaces
  projection
  stage
  dining_area
  barbeque_pit
}

class EventRequest {
  requestId : UUID
  requestType : Character
  eventId : UUID
  eventName : String
  purpose : String
  description : String
  startDatetime : OffsetDateTime
  endDatetime : OffsetDateTime
  expectedAttendance : Integer
  venueRequirements : String
  equipmentRequirements : String
  accessibilityNeeds : List<AccessibilityFeature>
  registrationNeeds : Boolean
  status : EventRequestStatus
  createdAt : OffsetDateTime
  updatedAt : OffsetDateTime
  organisation : String
  createdBy : UUID
  coordinatorId : UUID
  rejectionReason : String
}

class Venue {
  venueId : UUID
  venueAddress : String
  venueCapacity : Integer
  supportedLayouts : List<String>
  venueAccessibilities : List<String>
  venueFacilities : List<String>
  operatingInformation : String
  additionalInformation : String
}

' Dependency arrows (not associations): these enums are attribute types,
' not related objects with their own multiplicity/cardinality.
EventRequest ..> AccessibilityFeature : accessibilityNeeds
EventRequest ..> EventRequestStatus : status
Venue ..> VenueLayout : supportedLayouts
Venue ..> AccessibilityFeature : API labels
Venue ..> Facility : API labels
EventRequest -[hidden]- Venue

note right of EventRequest
  requestType 'C' = creation (eventId is null);
  'A' = amendment against an existing event
  (eventId set). See decision-log.md D7a.
end note

note bottom of Venue
  Not yet associated with EventRequest in code:
  venueRequirements is still free text (VS06's
  matching/suitability logic is a later story).
  SCHEMA.md's full ER diagram shows where this
  other tables (users, equipments, ...) are headed.
  VS16 booking/event read mappings appear below.
end note

class VenueEvent <<immutable read mapping>> {
  eventId : UUID
  eventName : String
  startDatetime : OffsetDateTime
  endDatetime : OffsetDateTime
  expectedAttendance : Integer
  venueRequirements : String
  accessibilityNeeds : List<String>
  equipmentRequirements : String
}

class VenueBooking <<immutable read mapping>> {
  bookingId : UUID
  status : VenueBookingStatus
  bookingNotes : String
  suitabilityNote : String
  submittedAt : OffsetDateTime
}

enum VenueBookingStatus {
  pending
  confirmed
  changed
  rejected
  cancelled
}

' ---- D21 (V13): request timeline and EC03 booking requests ----------

' Its own class rather than fields on EventRequest: each entry carries
' its own data (who, when, message, status change), which is the Week 5
' rule for giving an association its own class. Plain association, not
' composition: entries are append-only history, never cascaded or edited.
class RequestActivity <<append-only>> {
  activityId : UUID
  requestId : UUID
  eventId : UUID
  activityType : ActivityType
  actorUserId : UUID
  actorRole : String
  actorName : String
  message : String
  flaggedFields : List<String>
  fromStatus : String
  toStatus : String
  audienceRoles : List<String>
  occurredAt : OffsetDateTime
}

enum ActivityType {
  submitted
  coordinator_assigned
  clarification_requested
  clarification_responded
  approved
  rejected
  venue_booking_requested
  --
  audience() : Set<UserRole>
}

EventRequest "1" -- "0..*" RequestActivity : timeline >
RequestActivity ..> ActivityType : activityType

' EC03 write side of venue_bookings, separate from VS16's read model.
class VenueBookingRecord {
  bookingId : UUID
  venueId : UUID
  eventId : UUID
  status : VenueBookingStatus
  bookingNotes : String
  suitabilityNote : String
  rejectReason : String
  submittedBy : UUID
  submittedAt : OffsetDateTime
}

' Value object: how one venue fits one event (capacity, accessibility).
class VenueSuitability <<record>> {
  expectedAttendance : int
  capacity : int
  missingAccessibility : List<String>
  --
  capacityOk() : boolean
  needsJustification() : boolean
}

VenueBookingRecord ..> VenueBookingStatus : status
VenueSuitability ..> Venue : judges
VenueSuitability ..> VenueEvent : against

VenueBooking "0..*" --> "1" Venue : venue
VenueBooking "0..*" --> "1" VenueEvent : event
VenueBooking ..> VenueBookingStatus : status
note bottom of VenueEvent
  VS16 reads current events, not pending event_requests.
  No writes or approval behavior are implemented here.
end note

@enduml
